cox vae fin tuning

--- a/VAE_cox.ipynb
+++ b/VAE_cox.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -174,13 +174,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "VAE_COX_loss (generic function with 2 methods)"
+       "VAE_COX_loss (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -196,68 +196,6 @@
     "    log_risk = log.(cumsum(hazard_ratios))\n",
     "    uncensored_likelihood = outs .- log_risk\n",
     "    censored_likelihood = uncensored_likelihood .* Y_e'\n",
-    "    #neg_likelihood = - sum(censored_likelihood) / sum(e .== 1)\n",
-    "    neg_likelihood = - sum(censored_likelihood) * NE_frac\n",
-    "    return neg_likelihood\n",
-    "end "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 359,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "VAE_COX_loss (generic function with 2 methods)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "function VAE_COX_loss(VENC::VariationalEncoder, CPH, X, Y_e, NE_frac;device = gpu)\n",
-    "    nb_samples = size(X)[2]\n",
-    "    mu, log_sigma = VENC(X)\n",
-    "    z = mu + device(randn(Float32, size(log_sigma))) .* exp.(log_sigma)\n",
-    "    outs = vec(CPH(mu))\n",
-    "    hazard_ratios = exp.(outs)\n",
-    "    log_risk = log.(cumsum(hazard_ratios))\n",
-    "    uncensored_likelihood = outs .- log_risk\n",
-    "    censored_likelihood = uncensored_likelihood .* Y_e'\n",
-    "    #neg_likelihood = - sum(censored_likelihood) / sum(e .== 1)\n",
-    "    neg_likelihood = - sum(censored_likelihood) * NE_frac\n",
-    "    kl = 0.5f0 * sum(@. exp(log_sigma * 2f0) + mu ^ 2 - 1f0 - 2 * log_sigma)/ nb_samples;\n",
-    "    \n",
-    "    return neg_likelihood + kl\n",
-    "end "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 233,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "cox_nll_vec (generic function with 7 methods)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "function cox_nll_vec(enc::Chain,cph::Chain, X_, Y_e_, NE_frac)\n",
-    "    outs = vec(cph(enc(X_)))\n",
-    "    #outs = vec(mdl.cphdnn(mdl.encoder(X_)))\n",
-    "    hazard_ratios = exp.(outs)\n",
-    "    log_risk = log.(cumsum(hazard_ratios))\n",
-    "    uncensored_likelihood = outs .- log_risk\n",
-    "    censored_likelihood = uncensored_likelihood .* Y_e_'\n",
     "    #neg_likelihood = - sum(censored_likelihood) / sum(e .== 1)\n",
     "    neg_likelihood = - sum(censored_likelihood) * NE_frac\n",
     "    return neg_likelihood\n",
@@ -331,13 +269,14 @@
    "source": [
     "venc =VariationalEncoder(size(train_x)[1], 125, 600)\n",
     "cphdnn = gpu(Chain(Dense(125,64, leakyrelu),Dense(64, 1, bias = false)))\n",
-    "opt = Flux.ADAM(1e-6)\n",
+    "opt1 = Flux.ADAM(1e-6)\n",
     "wd = 1e-6\n",
     "ps1 = Flux.params(enc, cphdnn)\n",
     "gs1 = gradient(ps1) do \n",
     "    VAE_COX_loss(venc, cphdnn, train_x, train_y_e, NE_frac_tr) + l2_penalty(cphdnn) * wd + l2_penalty(venc) * wd\n",
     "    #VAE_COX_loss(model[\"venc\"], model[\"cph\"], train_x, train_y_e, NE_frac_tr) + l2_penalty(model[\"venc\"]) * wd + l2_penalty(model[\"cph\"]) * wd \n",
     "end \n",
+    "\n",
     "vaecox_loss =  round(VAE_COX_loss(venc, cphdnn, train_x, train_y_e, NE_frac_tr) + l2_penalty(cphdnn) * wd + l2_penalty(venc) * wd, digits = 3)  \n",
     "OUTS_tr = cphdnn(venc(train_x)[1])\n",
     "OUTS_tst = cphdnn(venc(test_x)[1])\n",
@@ -346,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -362,192 +301,129 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 TRAIN 251.704 cind: 0.447 \t TEST cind: 0.409 [655, 946, 0]\n"
+      "1 TRAIN 4.949 cind: 0.549 \t TEST ae-corr: -0.004 \tcind: 0.532 [897, 789, 0]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "800 TRAIN 251.531 cind: 0.638 \t TEST cind: 0.565 [904, 697, 0]\n"
+      "400 TRAIN 4.949 cind: 0.549 \t TEST ae-corr: 0.896 \tcind: 0.532 [897, 789, 0]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1600 TRAIN 251.451 cind: 0.697 \t TEST cind: 0.624 [999, 602, 0]\n"
+      "800 TRAIN 4.949 cind: 0.549 \t TEST ae-corr: 0.918 \tcind: 0.532 [897, 789, 0]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2400 TRAIN 251.38 cind: 0.718 \t TEST cind: 0.63 [1009, 592, 0]\n"
+      "1200 TRAIN 4.949 cind: 0.549 \t TEST ae-corr: 0.935 \tcind: 0.532 [897, 789, 0]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3200 TRAIN 251.33 cind: 0.729 \t TEST cind: 0.633 [1013, 588, 0]\n"
+      "1600 TRAIN 4.949 cind: 0.549 \t TEST ae-corr: 0.941 \tcind: 0.532 [897, 789, 0]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4000 TRAIN 251.288 cind: 0.739 \t TEST cind: 0.632 [1012, 589, 0]\n"
+      "2000 TRAIN 4.949 cind: 0.549 \t TEST ae-corr: 0.947 \tcind: 0.532 [897, 789, 0]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4800 TRAIN 251.247 cind: 0.748 \t TEST cind: 0.631 [1010, 591, 0]\n"
+      "2400 TRAIN 4.949 cind: 0.549 \t TEST ae-corr: 0.95 \tcind: 0.532 [897, 789, 0]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5600 TRAIN 251.212 cind: 0.757 \t TEST cind: 0.628 [1006, 595, 0]\n"
+      "2800 TRAIN 4.949 cind: 0.549 \t TEST ae-corr: 0.953 \tcind: 0.532 [897, 789, 0]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6400 TRAIN 251.177 cind: 0.764 \t TEST cind: 0.628 [1006, 595, 0]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7200 TRAIN 251.144 cind: 0.773 \t TEST cind: 0.624 [999, 602, 0]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8000 TRAIN 251.112 cind: 0.78 \t TEST cind: 0.624 [999, 602, 0]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8800 TRAIN 251.083 cind: 0.786 \t TEST cind: 0.625 [1000, 601, 0]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9600 TRAIN 251.054 cind: 0.792 \t TEST cind: 0.625 [1001, 600, 0]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10400 TRAIN 251.026 cind: 0.799 \t TEST cind: 0.62 [992, 609, 0]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "11200 TRAIN 251.0 cind: 0.804 \t TEST cind: 0.615 [984, 617, 0]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12000 TRAIN 250.974 cind: 0.808 \t TEST cind: 0.612 [980, 621, 0]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12800 TRAIN 250.948 cind: 0.814 \t TEST cind: 0.606 [971, 630, 0]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "13600 TRAIN 250.923 cind: 0.819 \t TEST cind: 0.608 [973, 628, 0]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "14400 TRAIN 250.897 cind: 0.824 \t TEST cind: 0.608 [974, 627, 0]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15200 TRAIN 250.871 cind: 0.829 \t TEST cind: 0.607 [972, 629, 0]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "16000 TRAIN 250.845 cind: 0.835 \t TEST cind: 0.606 [970, 631, 0]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "16800 TRAIN 250.82 cind: 0.839 \t TEST cind: 0.605 [969, 632, 0]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "17600 TRAIN 250.792 cind: 0.844 \t TEST cind: 0.6 [960, 641, 0]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "18400 TRAIN 250.768 cind: 0.849 \t TEST cind: 0.6 [960, 641, 0]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "19200 TRAIN 250.744 cind: 0.854 \t TEST cind: 0.595 [953, 648, 0]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20000 TRAIN 250.721 cind: 0.858 \t TEST cind: 0.595 [952, 649, 0]\n"
+      "3200 TRAIN 4.949 cind: 0.549 \t TEST ae-corr: 0.954 \tcind: 0.532 [897, 789, 0]\n"
      ]
     }
    ],
    "source": [
-    "train_x, train_y_t, train_y_e, NE_frac_tr, test_x, test_y_t, test_y_e, NE_frac_tst, params_dict = data_prep(LAML;nepochs = 20_000)\n",
-    "venc =VariationalEncoder(size(train_x)[1], 125, 600)\n",
+    "train_x, train_y_t, train_y_e, NE_frac_tr, test_x, test_y_t, test_y_e, NE_frac_tst, params_dict = data_prep(LAML;nepochs = 10_000)\n",
+    "venc = VariationalEncoder(size(train_x)[1], 125, 600)\n",
+    "vdec = Decoder(size(train_x)[1], 125, 600)\n",
     "cphdnn = gpu(Chain(Dense(125,64, leakyrelu),Dense(64, 1, bias = false)))\n",
-    "opt = Flux.ADAM(1e-6)\n",
+    "opt1 = Flux.ADAM(1e-6) ## opt VENC-CPHDNN\n",
+    "opt2 = Flux.ADAM(1e-5) ## opt VAE\n",
     "wd = params_dict[\"cph_wd\"]\n",
     "opt = Flux.ADAM(params_dict[\"cph_lr\"])\n",
+    "# training VAE only first\n",
+    "for i in 1:params_dict[\"nepochs\"]\n",
+    "    vaecox_loss =  round(VAE_COX_loss(venc, cphdnn, train_x, train_y_e, NE_frac_tr) + l2_penalty(cphdnn) * wd + l2_penalty(venc) * wd, digits = 3)  \n",
+    "    \n",
+    "    OUTS_tr = cphdnn(venc(train_x)[1])\n",
+    "    OUTS_tst = cphdnn(venc(test_x)[1])\n",
+    "    \n",
+    "    ps2 = Flux.params(venc, vdec)\n",
+    "    gs2 = gradient(ps2) do \n",
+    "        VAE_lossf(venc, vdec, train_x) + l2_penalty(venc) * wd + l2_penalty(vdec) * wd\n",
+    "        #VAE_COX_loss(model[\"venc\"], model[\"cph\"], train_x, train_y_e, NE_frac_tr) + l2_penalty(model[\"venc\"]) * wd + l2_penalty(model[\"cph\"]) * wd \n",
+    "    end \n",
+    "    vae_loss =  round(VAE_lossf(venc, vdec, train_x) + l2_penalty(venc) * wd + l2_penalty(vdec) * wd, digits = 3)  \n",
+    "    VAE_test = round(my_cor(vec(test_x), vec(MyReconstruct(venc, vdec, test_x)[end])),digits = 3)\n",
+    "\n",
+    "    cind_tr, cdnt_tr, ddnt_tr, tied_tr  = concordance_index(train_y_t, train_y_e, -1 * OUTS_tr)\n",
+    "    cind_test,cdnt_tst, ddnt_tst, tied_tst = concordance_index(test_y_t, test_y_e, -1 *OUTS_tst)\n",
+    "    \n",
+    "    if i%400 ==0 || i == 1\n",
+    "    println(\"$i TRAIN $vaecox_loss cind: $(round(cind_tr, digits = 3)) \\t TEST ae-corr: $VAE_test \\tcind: $(round(cind_test, digits = 3)) [$(Int(cdnt_tst)), $(Int(ddnt_tst)), $(Int(tied_tst))]\")\n",
+    "    end \n",
+    "    #Flux.update!(opt1,ps1, gs1)\n",
+    "    Flux.update!(opt2,ps2, gs2)\n",
+    "    params_dict[\"cph_tst_c_ind\"] = cind_test\n",
+    "    params_dict[\"cph_train_c_ind\"] = cind_tr\n",
+    "    params_dict[\"step\"] = i \n",
+    "end\n",
+    "# training VENC-CPHDNN \n",
+    "for i in 1:params_dict[\"nepochs\"]\n",
+    "    ps1 = Flux.params(cphdnn)\n",
+    "    gs1 = gradient(ps1) do \n",
+    "        cox_nll_vec(cphdnn, venc(train_x)[1], train_y_e, NE_frac_tr) + l2_penalty(cphdnn) * wd \n",
+    "        #VAE_COX_loss(model[\"venc\"], model[\"cph\"], train_x, train_y_e, NE_frac_tr) + l2_penalty(model[\"venc\"]) * wd + l2_penalty(model[\"cph\"]) * wd \n",
+    "    end \n",
+    "    vaecox_loss =  round(cox_nll_vec(cphdnn, venc(train_x)[1], train_y_e, NE_frac_tr) + l2_penalty(cphdnn) * wd  , digits = 3)  \n",
+    "    OUTS_tr = cphdnn(venc(train_x)[1])\n",
+    "    OUTS_tst = cphdnn(venc(test_x)[1])\n",
+    "    \n",
+    "    vae_loss =  round(VAE_lossf(venc, vdec, train_x) + l2_penalty(venc) * wd + l2_penalty(vdec) * wd, digits = 3)  \n",
+    "    VAE_test = round(my_cor(vec(test_x), vec(MyReconstruct(venc, vdec, test_x)[end])),digits = 3)\n",
+    "\n",
+    "    cind_tr, cdnt_tr, ddnt_tr, tied_tr  = concordance_index(train_y_t, train_y_e, -1 * OUTS_tr)\n",
+    "    cind_test,cdnt_tst, ddnt_tst, tied_tst = concordance_index(test_y_t, test_y_e, -1 *OUTS_tst)\n",
+    "    \n",
+    "    if i%400 ==0 || i == 1\n",
+    "    println(\"$i TRAIN $vaecox_loss cind: $(round(cind_tr, digits = 3)) \\t TEST ae-corr: $VAE_test \\tcind: $(round(cind_test, digits = 3)) [$(Int(cdnt_tst)), $(Int(ddnt_tst)), $(Int(tied_tst))]\")\n",
+    "    end \n",
+    "    Flux.update!(opt1,ps1, gs1)\n",
+    "    #Flux.update!(opt2,ps2, gs2)\n",
+    "    params_dict[\"cph_tst_c_ind\"] = cind_test\n",
+    "    params_dict[\"cph_train_c_ind\"] = cind_tr\n",
+    "    params_dict[\"step\"] = i \n",
+    "end\n",
+    "# training VENC-CPHDNN \n",
     "for i in 1:params_dict[\"nepochs\"]\n",
     "    ps1 = Flux.params(venc, cphdnn)\n",
     "    gs1 = gradient(ps1) do \n",
@@ -557,14 +433,18 @@
     "    vaecox_loss =  round(VAE_COX_loss(venc, cphdnn, train_x, train_y_e, NE_frac_tr) + l2_penalty(cphdnn) * wd + l2_penalty(venc) * wd, digits = 3)  \n",
     "    OUTS_tr = cphdnn(venc(train_x)[1])\n",
     "    OUTS_tst = cphdnn(venc(test_x)[1])\n",
-    "        \n",
+    "    \n",
+    "    vae_loss =  round(VAE_lossf(venc, vdec, train_x) + l2_penalty(venc) * wd + l2_penalty(vdec) * wd, digits = 3)  \n",
+    "    VAE_test = round(my_cor(vec(test_x), vec(MyReconstruct(venc, vdec, test_x)[end])),digits = 3)\n",
+    "\n",
     "    cind_tr, cdnt_tr, ddnt_tr, tied_tr  = concordance_index(train_y_t, train_y_e, -1 * OUTS_tr)\n",
     "    cind_test,cdnt_tst, ddnt_tst, tied_tst = concordance_index(test_y_t, test_y_e, -1 *OUTS_tst)\n",
     "    \n",
-    "    if i%800==0 || i == 1\n",
-    "    println(\"$i TRAIN $vaecox_loss cind: $(round(cind_tr, digits = 3)) \\t TEST cind: $(round(cind_test, digits = 3)) [$(Int(cdnt_tst)), $(Int(ddnt_tst)), $(Int(tied_tst))]\")\n",
+    "    if i%400 ==0 || i == 1\n",
+    "    println(\"$i TRAIN $vaecox_loss cind: $(round(cind_tr, digits = 3)) \\t TEST ae-corr: $VAE_test \\tcind: $(round(cind_test, digits = 3)) [$(Int(cdnt_tst)), $(Int(ddnt_tst)), $(Int(tied_tst))]\")\n",
     "    end \n",
-    "    Flux.update!(opt,ps1, gs1)\n",
+    "    Flux.update!(opt1,ps1, gs1)\n",
+    "    #Flux.update!(opt2,ps2, gs2)\n",
     "    params_dict[\"cph_tst_c_ind\"] = cind_test\n",
     "    params_dict[\"cph_train_c_ind\"] = cind_tr\n",
     "    params_dict[\"step\"] = i \n",
