updated julia to 1.10

--- a/tcga_anlyses.ipynb
+++ b/tcga_anlyses.ipynb
@@ -16,13 +16,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/coxph_dimensions`\n"
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/vae_cox`\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "validate_aecphdnn_dev! (generic function with 1 method)"
+       "concordance_index (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -41,6 +41,25 @@
    "metadata": {},
    "source": [
     "## Data preparation and processing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# LGG (Brain glioma) data processing\n",
+    "prefix = \"TCGA_LGG\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LGG = MLSurvDataset(\"Data/TCGA_LGG_tpm...\")"
    ]
   },
   {
@@ -6397,15 +6416,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.9.4",
+   "display_name": "Julia 1.10.0",
    "language": "julia",
-   "name": "julia-1.9"
+   "name": "julia-1.10"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.9.4"
+   "version": "1.10.0"
   }
  },
  "nbformat": 4,
