--- a/tcga_anlyses.ipynb
+++ b/tcga_anlyses.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -388,6 +388,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Data/GDC_raw/TCGA_COAD\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "create_fetch_data_file(;prefix = \"TCGA_COAD\")\n",
+    "mkdir(\"Data/GDC_raw/TCGA_COAD\")\n",
+    "# process_dataset(\"COAD\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [
@@ -428,34 +449,186 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\"Data/GDC_raw/TCGA_UCEC\""
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: 18.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: 36.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: 54.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: 72.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: 90.0%\n"
+     ]
     }
    ],
    "source": [
     "create_fetch_data_file(;prefix = \"TCGA_UCEC\")\n",
-    "mkdir(\"Data/GDC_raw/TCGA_UCEC\")\n",
-    "#process_dataset(\"UCEC\")"
+    "# mkdir(\"Data/GDC_raw/TCGA_UCEC\")\n",
+    "process_dataset(\"UCEC\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: 22.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: 44.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: 66.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: 87.0%\n"
+     ]
+    }
+   ],
    "source": [
     "create_fetch_data_file(;prefix = \"TCGA_COAD\")\n",
-    "mkdir(\"Data/GDC_raw/TCGA_COAD\")\n",
-    "#process_dataset(\"COAD\")"
+    "#mkdir(\"Data/GDC_raw/TCGA_COAD\")\n",
+    "process_dataset(\"COAD\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: 34.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: 69.0%\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_fetch_data_file(;prefix = \"TCGA_KIRP\")\n",
+    "#mkdir(\"Data/GDC_raw/TCGA_KIRP\")\n",
+    "process_dataset(\"KIRP\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: 54.0%\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_fetch_data_file(;prefix = \"TCGA_ESCA\")\n",
+    "#mkdir(\"Data/GDC_raw/TCGA_ESCA\")\n",
+    "process_dataset(\"ESCA\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: 33.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: 66.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: 99.0%\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_fetch_data_file(;prefix = \"TCGA_CESC\")\n",
+    "# mkdir(\"Data/GDC_raw/TCGA_CESC\")\n",
+    "process_dataset(\"CESC\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: 56.0%\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_fetch_data_file(;prefix = \"TCGA_PAAD\")\n",
+    "# mkdir(\"Data/GDC_raw/TCGA_PAAD\")\n",
+    "process_dataset(\"PAAD\")"
    ]
   },
   {
@@ -509,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
