meta learning TCGA

--- a/tcga_anlyses.ipynb
+++ b/tcga_anlyses.ipynb
@@ -536,6 +536,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: 66.0%\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_fetch_data_file(;prefix = \"TCGA_LAML\")\n",
+    "# mkdir(\"Data/GDC_raw/TCGA_LAML\")\n",
+    "process_dataset(\"LAML\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -614,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +715,7 @@
     }
    ],
    "source": [
-    "function process_dataset(dataset)\n",
+    "function process_dataset(dataset; outdir=\"Data/TCGA_datasets\")\n",
     "m, samples, genes, biotypes = merge_GDC_data(\"Data/GDC_raw/TCGA_$(dataset)\")\n",
     "basepath = \"Data/GDC_raw\"\n",
     "FILES = \"$basepath/TCGA_$(dataset)_clinical.json\"\n",
@@ -738,7 +757,7 @@
     "    \n",
     "CLIN_df = DataFrame(:case_id=>case_ids, :submitid=>submitids,:survt=>Array{Int}(survts),:surve=>Array{Int}(surves), :morph=>labels)\n",
     "samples_df = sort(innerjoin(DataFrame(:case_id=>samples, :II=>collect(1:length(samples))), CLIN_df, on = :case_id), :II)\n",
-    "outfilename = \"Data/TCGA_$(dataset)_tpm_n$(size(samples_df)[1])_btypes_labels_surv.h5\"\n",
+    "outfilename = \"$outdir/TCGA_$(dataset)_tpm_n$(size(samples_df)[1])_btypes_labels_surv.h5\"\n",
     "outfile = h5open(outfilename, \"w\")\n",
     "outfile[\"data\"] = log10.(m[samples_df.II,:] .+ 1) \n",
     "outfile[\"samples\"] = Array{String}(samples[samples_df.II]) \n",
